Bug 88848 - XLSX: In charts, graph legend position is not saved if you drag it manually
Summary: XLSX: In charts, graph legend position is not saved if you drag it manually
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:5.0.0
Keywords:
: 97184 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-01-28 11:11 UTC by Andy
Modified: 2016-01-24 08:31 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
dragging the legend and saving in xls from lo4.4.0.3 resuts in the legend disappearing (7.00 KB, application/excel)
2015-01-30 20:30 UTC, Andy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andy 2015-01-28 11:11:02 UTC
Open a Calc document; type in some numbers, select them and click on the create chart button.

The default graph type is ok, just close the wizard and obtain the default graph.

Now reopen the graph with double-click, and drag the legend (by default it should be placed on the right side of the graph) anywhere you like.

Save the document and reopen it. Now, the legend in the graph has lost its desired position, and it is always placed at the upper left extreme corner of the graph.

This was not happening in previous LO releases (I am not able to specify since when the regression took place).

Notice that this is the behaviour when saving in standard .ODS format; 

if you save in .XLS format, the legend is no more visible when you reopen the file; 

if you save in .XLSX format, the legend is back at the default right-side position after reopening the file.
Comment 1 raal 2015-01-28 17:48:05 UTC
I can confirm with Version: 4.5.0.0.alpha0+
Build ID: 60143f4f7bc50054dcef923218b8c7c3bc154933
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-01-21_04:58:34
Comment 2 Michael Weghorn 2015-01-30 19:48:26 UTC
I bibisected this. The bibisect result below is only the behaviour for the first described case (saving in standard .ODS format).

The other two cases were behaving differently for me:

* I could not reproduce the error when saving the file in .XLS format. When reopening the file, the legend was at the place at which I had put it - so the behaviour was correct. I used a current master build (built with commit 51f82a58a7c057d649ce5e2b3627e7ccf267fe84).

* When saving in .XLSX format, the legend is always back at the original position on the right after reopening the file (as described by Andy). This behaviour is incorrect. However, this does not seem to be a regression. It's the same for all LibreOffice versions that I have tested (e.g. oldest version in "bibisect-43all" and current master build).


bibisect result:
 153f4f2366399a0459129b5161cda0f3b9c0dfbc is the first bad commit
commit 153f4f2366399a0459129b5161cda0f3b9c0dfbc
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Thu Nov 6 00:14:41 2014 +0000

    source-hash-647f83afb618acbf75c8c6f0a4531bd1e76d8a7e
    
    commit 647f83afb618acbf75c8c6f0a4531bd1e76d8a7e
    Author:     Samuel Mehrbrodt <s.mehrbrodt@gmail.com>
    AuthorDate: Wed Sep 24 23:18:59 2014 +0200
    Commit:     Samuel Mehrbrodt <s.mehrbrodt@gmail.com>
    CommitDate: Wed Sep 24 23:18:59 2014 +0200
    
        Fix fallout
    
        from e16c8534f446a7cc311d6d5026aae5457e4f8e6c
    
        Change-Id: I05154dd06b062aaf7fdffe1aa3792f9710293021

:100644 100644 607849af0361236f37dd14c361ab42d5c02a93e7 7097a417dcedfffcaf5404935db5b59f4c556cc8 M	ccache.log
:100644 100644 67f03a1c706c2997a6b68c2e8eb1cb29d3209ee5 2838f92f319a930168e2934bcefd38a08274b3db M	commitmsg
:100644 100644 a1f8247bf7f9196fe9ff5550d0ad7e12e70cbbb1 e6afcdb1775629517344738b9ee071b6eb413dc9 M	make.log
:040000 040000 556ed394b5bb981979b72d3912784b0a65a8d29f 2a4f23432980598491fbbe6daf265ec4c81d2abb M	opt

--------

$ git bisect log
# bad: [4a3091e95fa263d3e2dd81e56e83996f0bb12287] source-hash-2b5b04e1e62914bf0902dfd7943cdc44499c47a6
# good: [812c4a492375ac47b3557fbb32f5637fc89d60d9] source-hash-dea4a3b9d7182700abeb4dc756a24a9e8dea8474
git bisect start 'latest' 'oldest'
# good: [5d0dfb8e62ae61a240f8313c594d4560e7c8e048] source-hash-0c6cd530de13f80795881f61064f1bf1dcc4ea81
git bisect good 5d0dfb8e62ae61a240f8313c594d4560e7c8e048
# good: [7dfacd0b8bd828331d74c0f79de6e8924bc4e6a5] source-hash-f93ce4f7eb90093d0ea3115d0a1c614612676dbd
git bisect good 7dfacd0b8bd828331d74c0f79de6e8924bc4e6a5
# bad: [a42da134cd542144fca7ba14cce86c2b409fc18a] source-hash-beadebc0f7eb5582fcb8dcb082d19afdf2751876
git bisect bad a42da134cd542144fca7ba14cce86c2b409fc18a
# bad: [5f697ca821720f76105e5539f0408e68a0647481] source-hash-f9695150942341a755a43996d4639eb623d7640b
git bisect bad 5f697ca821720f76105e5539f0408e68a0647481
# bad: [3b00b662438462a4b73b0531ffa6192fc7e72638] source-hash-0a5cd87e591d7f87bfab92716079af719259f143
git bisect bad 3b00b662438462a4b73b0531ffa6192fc7e72638
# good: [b4320c4383b3d61076ac1794797bd3162612889d] source-hash-da21f7da44dc577a08ea3bc210083dc8decf18bc
git bisect good b4320c4383b3d61076ac1794797bd3162612889d
# bad: [e1690f3a96306b42e829d63cb23a48e4b90603b5] source-hash-3d394257945f6b0a4bc4b5ea397a3942a59c5d06
git bisect bad e1690f3a96306b42e829d63cb23a48e4b90603b5
# bad: [5de848a6e0a36f6ba90e6c32fd126942fde3293c] source-hash-fd0a49bdd7cf7979d18feff003d1b5fbe53fdc14
git bisect bad 5de848a6e0a36f6ba90e6c32fd126942fde3293c
# bad: [153f4f2366399a0459129b5161cda0f3b9c0dfbc] source-hash-647f83afb618acbf75c8c6f0a4531bd1e76d8a7e
git bisect bad 153f4f2366399a0459129b5161cda0f3b9c0dfbc
# first bad commit: [153f4f2366399a0459129b5161cda0f3b9c0dfbc] source-hash-647f83afb618acbf75c8c6f0a4531bd1e76d8a7e
Comment 3 Andy 2015-01-30 20:30:09 UTC
Created attachment 112974 [details]
dragging the legend and saving in xls from lo4.4.0.3 resuts in the legend disappearing
Comment 4 raal 2015-01-30 20:33:59 UTC
Hello,
.ods format is duplicate of bug 86624.

So  this bug report I'll change to xlsx case -> if you save in .XLSX format, the legend is back at the default right-side position after reopening the file. 

* When saving in .XLSX format, the legend is always back at the original position on the right after reopening the file (as described by Andy). This behaviour is incorrect. However, this does not seem to be a regression. It's the same for all LibreOffice versions that I have tested (e.g. oldest version in "bibisect-43all" and current master build).

Changing summary, version, delete keyword regression.
Comment 5 Commit Notification 2015-04-25 13:22:51 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0afab16d9afb8ccd1f089447868b25a960ec595b

support manualLayout for legends OOXML export, tdf#88848

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2015-04-25 13:22:54 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3aec78edd7e36a950866a91060f85cfcd3b4fbdd

add test for tdf#88848

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 raal 2015-04-25 13:51:54 UTC
Verified in Version: 5.0.0.0.alpha1+
Build ID: e9fbe1f7cd28de2a9da8089d89e903406165eb56
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-04-25_00:20:28

Thanks for fix!
Comment 8 raal 2016-01-24 08:31:44 UTC
*** Bug 97184 has been marked as a duplicate of this bug. ***