support manualLayout for legends OOXML export, tdf#88848

Change-Id: If7ac2a2294e20617fd8b599597085658051f5515